--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/jonathanestabillo/mono-repo-serverless.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jonathan Estabillo <jonathan.estabillo@gmail.com> (http://jonathanestabillo.me)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jonathanestabillo/mono-repo-serverless/issues"
